--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -32198,5 +32198,93 @@
         "published": "Mon, 29 Dec 2025 14:30:08 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Honasa CEO Varun Alagh Buys Shares Worth INR 50 Cr From Fireside Ventures\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/01/honasa-ftr.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Honasa Consumer\u2019s cofounder and CEO Varun Alagh has increased his stake in the beauty and personal care (BPC) major by&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/how-to-use-the-new-chatgpt-app-integrations-including-doordash-spotify-uber-and-others/",
+        "title": "How to use the new ChatGPT app integrations, including DoorDash, Spotify, Uber, and others",
+        "link": "https://techcrunch.com/2025/12/29/how-to-use-the-new-chatgpt-app-integrations-including-doordash-spotify-uber-and-others/",
+        "published": "Mon, 29 Dec 2025 15:51:40 +0000",
+        "source": "TechCrunch",
+        "summary": "Learn how to use Spotify, Canva, Figma, Expedia, and other apps directly in ChatGPT."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850705/beats-pixel-watch-apple-pencil-sales-deal",
+        "title": "Beats\u2019 new Powerbeats Fit earbuds are down to $180",
+        "link": "https://www.theverge.com/gadgets/850705/beats-pixel-watch-apple-pencil-sales-deal",
+        "published": "2025-12-29T10:53:03-05:00",
+        "source": "The Verge",
+        "summary": "It\u2019s almost the new year and time to treat yourself to a new pair of earbuds \u2014 especially if one of your resolutions for 2026 is to work out more. If you find yourself reading this and nodding, take a look at the Beats Powerbeats Fit, a recent upgrade of Beats\u2019 Fit Pro earbuds that [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/a-quirky-guide-to-myths-and-lore-based-in-actual-science/",
+        "title": "A quirky guide to myths and lore based in actual science",
+        "link": "https://arstechnica.com/science/2025/12/a-quirky-guide-to-myths-and-lore-based-in-actual-science/",
+        "published": "Mon, 29 Dec 2025 15:30:52 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Folklorist/historian Adrienne Mayor on her new book <em>Mythopedia: A Brief Compendium of Natural History Lore</em>"
+    },
+    {
+        "id": "https://arstechnica.com/information-technology/2025/12/gps-is-vulnerable-to-jamming-heres-how-we-might-fix-it/",
+        "title": "GPS is vulnerable to jamming\u2014here\u2019s how we might fix it",
+        "link": "https://arstechnica.com/information-technology/2025/12/gps-is-vulnerable-to-jamming-heres-how-we-might-fix-it/",
+        "published": "Mon, 29 Dec 2025 15:10:16 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "GPS jamming has gotten cheap and easy, but there are potential solutions."
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html?src=rss",
+        "title": "CES 2026: What to expect from tech\u2019s biggest conference in January",
+        "link": "https://www.engadget.com/big-tech/ces-2026-what-to-expect-from-techs-biggest-conference-in-january-120000369.html?src=rss",
+        "published": "Mon, 29 Dec 2025 16:03:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>CES is the January trade show where the tech industry kicks off the year with a bevy of new and notable announcements \u2014 and it\u2019s less than a week away. The CES 2026 show floor is officially open from January 6 through 9, but the fun kicks off with events on Sunday January 4 and a host of press conferences on Monday. As always, product demos, announcements and networking will be happening at the Las Vegas Convention Center and other hotels all over the city. As usual, Engadget will be covering"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/rainbow-six-siege-servers-are-back-online-after-shutting-down-in-response-to-marketplace-hacks-191049079.html?src=rss",
+        "title": "Rainbow Six Siege servers are back online after shutting down in response to Marketplace hacks",
+        "link": "https://www.engadget.com/gaming/rainbow-six-siege-servers-are-back-online-after-shutting-down-in-response-to-marketplace-hacks-191049079.html?src=rss",
+        "published": "Mon, 29 Dec 2025 15:22:54 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"no-affiliate-link link\" href=\"https://www.engadget.com/ubisoft-mousetrap-system-lengthens-lag-punish-rainbow-six-siege-cheaters-020008802.html\" target=\"_blank\">Ubisoft</a> had to shut down <em>Rainbow Six Siege</em>'s servers and roll back transactions, a situation that came from a widespread breach that left various players with billions of in-game credits, ultra-rare skins of weapons, and banned accounts. As of Sunday, December 28, the <a class=\"no-affiliate-link link\" href=\"https"
+    },
+    {
+        "id": "https://www.zdnet.com/article/free-google-photos-alternative-self-hosted/",
+        "title": "How I ditched Google Photos for my own private self-hosted alternative - for free",
+        "link": "https://www.zdnet.com/article/free-google-photos-alternative-self-hosted/",
+        "published": "Mon, 29 Dec 2025 15:30:01 GMT",
+        "source": "Latest news",
+        "summary": "If you're ready to cut the cord with Google, this option lets you host and sync your photos on your own terms. Here's how."
+    },
+    {
+        "id": "https://www.zdnet.com/article/what-is-bluetooth-6-headphones-speakers/",
+        "title": "What is Bluetooth 6.0? How the new audio connectivity standard changes the way you listen",
+        "link": "https://www.zdnet.com/article/what-is-bluetooth-6-headphones-speakers/",
+        "published": "Mon, 29 Dec 2025 15:19:00 GMT",
+        "source": "Latest news",
+        "summary": "Bluetooth 6 is gaining traction in audio, but its best features still depend on new hardware."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/electric-two-wheeler-maker-ather-energy-allots-4-3-lakh-shares-under-esop-plan/articleshow/126235410.cms",
+        "title": "Electric two-wheeler maker Ather Energy allots 4.3 lakh shares under Esop plan",
+        "link": "https://economictimes.indiatimes.com/tech/technology/electric-two-wheeler-maker-ather-energy-allots-4-3-lakh-shares-under-esop-plan/articleshow/126235410.cms",
+        "published": "Mon, 29 Dec 2025 21:21:25 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Bengaluru-based company\u2019s board approved the allotment through a circular resolution passed on December 29, under the Ather Energy Employee Stock Ownership Plan, 2025."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/private-jobs-for-locals-karnataka-cm-plans-to-revive-policy-paused-over-tech-sector-protests/articleshow/126235357.cms",
+        "title": "Private jobs for locals: Karnataka CM plans to revive policy paused over tech sector protests",
+        "link": "https://economictimes.indiatimes.com/tech/technology/private-jobs-for-locals-karnataka-cm-plans-to-revive-policy-paused-over-tech-sector-protests/articleshow/126235357.cms",
+        "published": "Mon, 29 Dec 2025 21:19:01 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The bill, which the government withheld in July last year, mandated 50% jobs for locals at the management level, and 75% at lower levels. It defined locals as those born in Karnataka, or residents of Karnataka for 15 years, or those who can read, write and speak Kannada, and clear a test in the language. Companies could seek exemption if locals are not available."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/softbank-to-buy-digitalbridge-in-4-billion-deal-to-bolster-ai-infrastructure-push/articleshow/126234972.cms",
+        "title": "SoftBank to buy DigitalBridge in $4 billion deal to bolster AI infrastructure push",
+        "link": "https://economictimes.indiatimes.com/tech/technology/softbank-to-buy-digitalbridge-in-4-billion-deal-to-bolster-ai-infrastructure-push/articleshow/126234972.cms",
+        "published": "Mon, 29 Dec 2025 20:46:41 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "SoftBank Group is acquiring DigitalBridge Group for $4 billion. This deal will boost SoftBank's focus on artificial intelligence. DigitalBridge is a major investor in digital infrastructure like data centers and cell towers. The acquisition is expected to conclude in the latter half of next year. SoftBank aims to leverage the growing demand for AI computing power."
     }
 ]
