📚 Auto-update: News data refreshed - 2025-12-29 19:09 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32414,5 +32414,61 @@
         "published": "Mon, 29 Dec 2025 17:30:37 GMT",
         "source": "Latest news",
         "summary": "An AirTag battery failure at the wrong time can leave your gear vulnerable. Elevation Lab's Time Capsule fixes that."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/2025-was-the-year-ai-got-a-vibe-check/",
+        "title": "2025 was the year AI got a vibe check",
+        "link": "https://techcrunch.com/2025/12/29/2025-was-the-year-ai-got-a-vibe-check/",
+        "published": "Mon, 29 Dec 2025 19:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "AI\u2019s early-2025 spending spree featured massive raises and trillion-dollar infrastructure promises. By year\u2019s end, hype gave way to a vibe check, with growing scrutiny over sustainability, safety, and business models."
+    },
+    {
+        "id": "https://www.theverge.com/news/850832/gog-cd-projekt-acquisition-steam",
+        "title": "GOG&#8217;s Steam-alternative PC game store is leaving CD Projekt, staying DRM-free",
+        "link": "https://www.theverge.com/news/850832/gog-cd-projekt-acquisition-steam",
+        "published": "2025-12-29T13:34:20-05:00",
+        "source": "The Verge",
+        "summary": "GOG is splitting from CD Projekt, the game company that launched the preservation-focused PC gaming marketplace in 2008. In an update on Monday, GOG announced that its co-founder, Micha&#322; Kici&#324;ski, has acquired the digital storefront and its online gaming platform GOG Galaxy from CD Projekt - which he also co-founded - for $25.2 million. The [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/home/how-to-watch-the-lg-ces-2026-press-conference-190159378.html?src=rss",
+        "title": "How to watch the LG CES 2026 press conference",
+        "link": "https://www.engadget.com/home/how-to-watch-the-lg-ces-2026-press-conference-190159378.html?src=rss",
+        "published": "Mon, 29 Dec 2025 19:01:59 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"LG\" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/6f089c60-db4f-11f0-ab9d-5c52fd4922f7\" style=\"height: 1080px; width: 1920px;\" /><figcaption>LG</figcaption></figure>\n<p>For years, LG has kicked off CES press day with the first event of the morning \u2014 and 2026 will be no different. The Korea-based corporation is theming its presentation as  &quot;<a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=472a467b-5d76-4e49-b1e8-d1e77258dd8e&amp;sit"
+    },
+    {
+        "id": "https://cuiiliste.de/domains",
+        "title": "List of domains censored by German ISPs",
+        "link": "https://cuiiliste.de/domains",
+        "published": "Mon, 29 Dec 2025 18:21:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46423566\">Comments</a>"
+    },
+    {
+        "id": "https://www.reuters.com/legal/transactional/nvidia-takes-5-billion-stake-intel-under-september-agreement-2025-12-29/",
+        "title": "Nvidia takes $5B stake in Intel under September agreement",
+        "link": "https://www.reuters.com/legal/transactional/nvidia-takes-5-billion-stake-intel-under-september-agreement-2025-12-29/",
+        "published": "Mon, 29 Dec 2025 17:32:08 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46423010\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/finally-a-magsafe-wallet-for-my-phone-that-feels-premium-and-its-affordable/",
+        "title": "Finally, a MagSafe wallet for my phone that feels premium (and it's affordable)",
+        "link": "https://www.zdnet.com/article/finally-a-magsafe-wallet-for-my-phone-that-feels-premium-and-its-affordable/",
+        "published": "Mon, 29 Dec 2025 18:39:30 GMT",
+        "source": "Latest news",
+        "summary": "The UAG Metropolis MagSafe wallet resembles my favorite Journey wallet nearly identically, and it's cheaper."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/information-tech/louis-gerstner-former-ibm-ceo-who-revitalized-big-blue-dies-at-83/articleshow/126237683.cms",
+        "title": "Louis Gerstner, former IBM CEO who revitalised 'Big Blue,' dies at 83",
+        "link": "https://economictimes.indiatimes.com/tech/information-tech/louis-gerstner-former-ibm-ceo-who-revitalized-big-blue-dies-at-83/articleshow/126237683.cms",
+        "published": "Mon, 29 Dec 2025 23:38:57 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "IBM \u200bchairman and CEO Arvind Krishna announced Gerstner's death \u2060in an email sent Sunday to employees, but did not provide a cause of death."
     }
 ]
