--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -32470,5 +32470,93 @@
         "published": "Mon, 29 Dec 2025 23:38:57 +0530",
         "source": "Tech-Economic Times",
         "summary": "IBM \u200bchairman and CEO Arvind Krishna announced Gerstner's death \u2060in an email sent Sunday to employees, but did not provide a cause of death."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/social-media-follower-counts-have-never-mattered-less-creator-economy-execs-say/",
+        "title": "Social media follower counts have never mattered less, creator economy execs say",
+        "link": "https://techcrunch.com/2025/12/29/social-media-follower-counts-have-never-mattered-less-creator-economy-execs-say/",
+        "published": "Mon, 29 Dec 2025 20:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "\u201cI think that 2025 was the year where the algorithm completely took over, so followings stopped mattering entirely,\u201d LTK CEO Amber Venz Box said."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/did-one-line-in-a-leonardo-codex-anticipate-yakisugi/",
+        "title": "Leonardo\u2019s wood charring method predates Japanese practice",
+        "link": "https://arstechnica.com/science/2025/12/did-one-line-in-a-leonardo-codex-anticipate-yakisugi/",
+        "published": "Mon, 29 Dec 2025 19:30:47 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The Japanese technique of burning wood surfaces creates a protective carbonized layer in bioarchitecture."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/researchers-make-neuromorphic-artificial-skin-for-robots/",
+        "title": "Researchers make \u201cneuromorphic\u201d artificial skin for robots",
+        "link": "https://arstechnica.com/science/2025/12/researchers-make-neuromorphic-artificial-skin-for-robots/",
+        "published": "Mon, 29 Dec 2025 19:00:42 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Information from sensors is transmitted using neural-style activity spikes."
+    },
+    {
+        "id": "https://www.engadget.com/science/space/nasa-finally-has-a-leader-but-its-future-is-no-more-certain-201109072.html?src=rss",
+        "title": "NASA finally has a leader, but its future is no more certain",
+        "link": "https://www.engadget.com/science/space/nasa-finally-has-a-leader-but-its-future-is-no-more-certain-201109072.html?src=rss",
+        "published": "Mon, 29 Dec 2025 20:11:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>After a rudderless year and an <a class=\"link\" href=\"https://www.engadget.com/science/space/nasa-may-lose-close-to-4000-employees-after-latest-deferred-resignation-round-204452249.html\" target=\"_blank\">exodus of around 4,000 employees</a> due to Trump administration cuts, NASA got what may be its first piece of good news recently. On December 17, the Senate <a class=\"link\" href=\"https://www.engadget.com/science/space/jared-isaacman-is-nasas-new-leader-220833691.html\" target=\"_blank\">confirmed"
+    },
+    {
+        "id": "https://www.businessinsider.com/meta-ai-generating-bizarre-ads-advantage-plus-2025-10",
+        "title": "Meta's ads tools started switching out top-performing ads with AI-generated ones",
+        "link": "https://www.businessinsider.com/meta-ai-generating-bizarre-ads-advantage-plus-2025-10",
+        "published": "Mon, 29 Dec 2025 19:51:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46424733\">Comments</a>"
+    },
+    {
+        "id": "https://www.brendangregg.com/blog/2017-02-06/flamegraphs-vs-treemaps-vs-sunburst.html",
+        "title": "Flame Graphs vs. Tree Maps vs. Sunburst (2017)",
+        "link": "https://www.brendangregg.com/blog/2017-02-06/flamegraphs-vs-treemaps-vs-sunburst.html",
+        "published": "Sat, 27 Dec 2025 11:30:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46401052\">Comments</a>"
+    },
+    {
+        "id": "https://www.getflack.com/p/responding-to-negative-feedback",
+        "title": "When someone says they hate your product with a burning passion",
+        "link": "https://www.getflack.com/p/responding-to-negative-feedback",
+        "published": "Mon, 29 Dec 2025 19:30:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46424460\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-slop-brainrot-youtube-shorts/",
+        "title": "1 in 5 YouTube Shorts is AI slop now - and Americans are eating it up",
+        "link": "https://www.zdnet.com/article/ai-slop-brainrot-youtube-shorts/",
+        "published": "Mon, 29 Dec 2025 19:41:32 GMT",
+        "source": "Latest news",
+        "summary": "Low-quality 'brainrot' content is filling up YouTube, but people keep watching."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-galaxy-fold-wide-rumor-2026/",
+        "title": "Samsung's Galaxy TriFold impressed me, but this rumored alternative is the phone to buy",
+        "link": "https://www.zdnet.com/article/samsung-galaxy-fold-wide-rumor-2026/",
+        "published": "Mon, 29 Dec 2025 19:35:00 GMT",
+        "source": "Latest news",
+        "summary": "A wide-screen Samsung Galaxy Fold phone would combine the pocketability of a Flip 7 and the versatility of a Fold 7."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/gargi-varna-cm-yuva-yojana-namkeen-business-up",
+        "title": "Sarsatpur to store shelves: Farmer turns founder with namkeen microenterprise",
+        "link": "https://yourstory.com/2025/12/gargi-varna-cm-yuva-yojana-namkeen-business-up",
+        "published": "Mon, 29 Dec 2025 18:59:34 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Sarsatpur to store shelves: Farmer turns founder with namkeen microenterprise"
+    },
+    {
+        "id": "https://inc42.com/buzz/adda24-owned-studyiqs-cofounder-gaurav-garg-steps-down/",
+        "title": "Adda24-Owned StudyIQ\u2019s Cofounder Gaurav Garg Steps Down",
+        "link": "https://inc42.com/buzz/adda24-owned-studyiqs-cofounder-gaurav-garg-steps-down/",
+        "published": "Mon, 29 Dec 2025 20:08:38 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/studyiq-quit-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />StudyIQ cofounder and managing director Gaurav Garg has stepped down from his role at the Adda247-owned edtech platform. \u201cToday was&#8230;"
     }
 ]
