📚 Auto-update: News data refreshed - 2025-12-29 21:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32558,5 +32558,45 @@
         "published": "Mon, 29 Dec 2025 20:08:38 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/studyiq-quit-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />StudyIQ cofounder and managing director Gaurav Garg has stepped down from his role at the Adda247-owned edtech platform. \u201cToday was&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/vcs-spill-what-they-really-want-to-hear-in-a-founder-pitch/",
+        "title": "How to make your startup stand out in a crowded market, according to investors",
+        "link": "https://techcrunch.com/2025/12/29/vcs-spill-what-they-really-want-to-hear-in-a-founder-pitch/",
+        "published": "Mon, 29 Dec 2025 21:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Investors on what they really want to hear in a founder's pitch."
+    },
+    {
+        "id": "https://www.engadget.com/deals/apple-airtag-four-packs-are-on-sale-for-65-right-now-202333053.html?src=rss",
+        "title": "Apple AirTag four-packs are on sale for $65 right now",
+        "link": "https://www.engadget.com/deals/apple-airtag-four-packs-are-on-sale-for-65-right-now-202333053.html?src=rss",
+        "published": "Mon, 29 Dec 2025 20:47:52 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple keeps most of its product pricing on a tight leash, but we do see the company's AirTags go on sale pretty frequently. Another cost cut has come around for this item just in time for the new year. Amazon is currently selling a four-pack of <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0D54JZTHY&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=24b60c33-f851-4bee-9d8b-9c00c8cc034a&amp;feat"
+    },
+    {
+        "id": "https://www.circusscientist.com/2025/12/29/google-is-dead-where-do-we-go-now/",
+        "title": "Google is dead. Where do we go now?",
+        "link": "https://www.circusscientist.com/2025/12/29/google-is-dead-where-do-we-go-now/",
+        "published": "Mon, 29 Dec 2025 20:29:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46425198\">Comments</a>"
+    },
+    {
+        "id": "https://delistedgames.com/all-delisted-steam-games/",
+        "title": "All Delisted Steam Games",
+        "link": "https://delistedgames.com/all-delisted-steam-games/",
+        "published": "Mon, 29 Dec 2025 19:16:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46424262\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsungs-new-wi-fi-speakers-soundbars-ces-2026/",
+        "title": "Samsung just unveiled its first Wi-Fi speakers ahead of CES 2026, and they look splurge-worthy",
+        "link": "https://www.zdnet.com/article/samsungs-new-wi-fi-speakers-soundbars-ces-2026/",
+        "published": "Mon, 29 Dec 2025 21:06:00 GMT",
+        "source": "Latest news",
+        "summary": "Alongside a new flagship and all-in-one soundbar, Samsung has debuted its new Wi-Fi-enabled smart speakers."
     }
 ]
