📚 Auto-update: News data refreshed - 2025-12-29 22:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32598,5 +32598,29 @@
         "published": "Mon, 29 Dec 2025 21:06:00 GMT",
         "source": "Latest news",
         "summary": "Alongside a new flagship and all-in-one soundbar, Samsung has debuted its new Wi-Fi-enabled smart speakers."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/us-cant-deport-hate-speech-researcher-for-protected-speech-lawsuit-says/",
+        "title": "US can\u2019t deport hate speech researcher for protected speech, lawsuit says",
+        "link": "https://arstechnica.com/tech-policy/2025/12/us-cant-deport-hate-speech-researcher-for-protected-speech-lawsuit-says/",
+        "published": "Mon, 29 Dec 2025 21:30:29 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "On Monday, US officials must explain what steps they took to enforce shocking visa bans."
+    },
+    {
+        "id": "https://www.boundary2.org/2019/08/sarah-t-roberts-and-mel-hogan-left-behind-futurist-fetishists-prepping-and-the-abandonment-of-earth/",
+        "title": "Left Behind: Futurist Fetishists, Prepping and the Abandonment of Earth (2019)",
+        "link": "https://www.boundary2.org/2019/08/sarah-t-roberts-and-mel-hogan-left-behind-futurist-fetishists-prepping-and-the-abandonment-of-earth/",
+        "published": "Mon, 29 Dec 2025 19:12:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46424217\">Comments</a>"
+    },
+    {
+        "id": "https://codemanship.wordpress.com/2025/11/25/the-future-of-software-development-is-software-developers/",
+        "title": "The Future of Software Development Is Software Developers",
+        "link": "https://codemanship.wordpress.com/2025/11/25/the-future-of-software-development-is-software-developers/",
+        "published": "Mon, 29 Dec 2025 19:14:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46424233\">Comments</a>"
     }
 ]
