--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -32622,5 +32622,29 @@
         "published": "Mon, 29 Dec 2025 19:14:17 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46424233\">Comments</a>"
+    },
+    {
+        "id": "https://manus.im/blog/manus-joins-meta-for-next-era-of-innovation",
+        "title": "ManusAI Joins Meta",
+        "link": "https://manus.im/blog/manus-joins-meta-for-next-era-of-innovation",
+        "published": "Mon, 29 Dec 2025 22:24:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46426534\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/mutable-state-inc/ensue-skill",
+        "title": "Show HN: Stop Claude Code from forgetting everything",
+        "link": "https://github.com/mutable-state-inc/ensue-skill",
+        "published": "Mon, 29 Dec 2025 22:30:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46426624\">Comments</a>"
+    },
+    {
+        "id": "https://alec.is/posts/ai-employees-dont-pay-taxes/",
+        "title": "AI Employees Don't Pay Taxes",
+        "link": "https://alec.is/posts/ai-employees-dont-pay-taxes/",
+        "published": "Mon, 29 Dec 2025 22:28:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46426596\">Comments</a>"
     }
 ]
